Fix misaligned number

--- a/css/custom.css
+++ b/css/custom.css
@@ -231,8 +231,8 @@ li.social-email a {
   color: #fff;
   font-size: 18px;
   position: relative;
-  left: -17px;
-  top: -3px;
+  left: -7px;
+  top: -31px;
   font-family: 'Helvetica', 'Arial', 'sans-serif';
 }
 
